--- a/package.json
+++ b/package.json
@@ -1,21 +1,20 @@
 {
   "name": "aajadwal",
   "version": "1.0.0",
-  "description": "A modern, responsive web application for managing and viewing the class schedule and assignments for SMKN 7 Samarinda, XI TJKT 2.",
+  "description": "Jadwal Kelas XII TJKT 2 - Static schedule application for SMKN 7 Samarinda",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "node server.js"
   },
-  "keywords": [],
+  "keywords": [
+    "schedule",
+    "jadwal",
+    "kelas"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "mongoose": "^8.14.3"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.3"
+    "express": "^4.18.2"
   }
 }
